crates/service/tests/completion/snapshots/features__completion__keyword__export_desc_keyword.snap
---
source: crates/service/tests/completion/keyword.rs
expression: response
---
[
  {
    "label": "func",
    "kind": 14
  },
  {
    "label": "table",
    "kind": 14
  },
  {
    "label": "memory",
    "kind": 14
  },
  {
    "label": "global",
    "kind": 14
  }
]
