crates/service/tests/completion/snapshots/features__completion__keyword__module_field_memory_keyword.snap
---
source: crates/service/tests/completion/keyword.rs
expression: response
---
[
  {
    "label": "import",
    "kind": 14
  },
  {
    "label": "export",
    "kind": 14
  },
  {
    "label": "data",
    "kind": 14
  }
]
