crates/service/tests/completion/snapshots/features__completion__keyword__module_keyword.snap
---
source: crates/service/tests/completion/keyword.rs
expression: response
---
[
  {
    "label": "module",
    "kind": 14
  }
]
